# OS_lab_5

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh
src/: database.cpp  database.h  http_server.cpp  http_server.h  server.cpp  simulator.cpp
web_client/: app.py
web_client/templates/: index.html
